name: adventofcode
version: 1.0
cabal-version: 1.11
build-type: Simple
license: MIT
stability: experimental
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.0
Executable adventofcode
  main-is: Main.hs
  buildable: True
  build-depends:
      regex-pcre -any,
      base -any,
      regex-base -any,
      split -any,
      containers -any
  other-modules:
      Day3
      Day9p2
      Day1
      Day4p2
      Day8p2
      Day4
      Day5p2
      Day14
      Day2
      Day8
      Day1p2
      Day6
      Day2p2
      Day9
      Day10p2
      Day6p2
      Day10
      Day5
